[package]
name = "jagra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.10"
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
iced_aw = { version = "0.7", features = ["modal"] }
once_cell = "1.18.0"